# fairmoney-backend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  old_migrations.sql
migrations/: 0001_create_users.sql  20250710104741_create_core_tables.sql
migrations/2025-07-12-160210_create_users/: up.sql
migrations/2025-07-17-142331_create_groups/: up.sql
migrations/2025-07-17-142706_create_transactions/: up.sql
migrations/2025-07-17-142927_create_transaction_shares/: down.sql  up.sql
migrations/2025-07-17-143410_create_group_membership/: up.sql
src/: api_doc.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
src/auth/: handlers.rs  jwt.rs
src/db/: mod.rs  models.rs
src/groups/: handlers.rs
src/models/: auth.rs  mod.rs  models.rs  request_models.rs
src/routes/: mod.rs
src/transactions/: handlers.rs
