[package]
name = "fairmoney-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.12", features = ["sqlite", "r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
log = "0.4.27"
thiserror = "2.0.12"
