[package]
name = "fairmoney-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.12", features = ["sqlite", "r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
chrono = "0.4.41"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }